@@ -27,6 +27,7 @@
 - address issue152: return a proper 400 "not registered" message instead
   of 500 when a doczip is uploaded without prior registration.
 
+- support for external authentication plugins.
 
 2.0.6
 ----------------
